--- a/website/css/pages/reservations.css
+++ b/website/css/pages/reservations.css
@@ -4,7 +4,7 @@
  }
 
  .header {
-	background: url("https://i.imgur.com/KvLQeiS.jpg") no-repeat fixed center center / cover transparent;
+	background: url("https://i.imgur.com/KvLQeiS.jpg") no-repeat fixed center center / cover #FFFFFF;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
